<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kutamba</string>

    
        <!-- Fragment Labels -->
    <string name="label_home">Home</string>
    <string name="label_top_airing">Top Airing</string>
    <string name="label_popular">Popular</string>
    <string name="label_explore">Explore</string>
    <string name="label_search">Search</string>
    <string name="label_latest">Latest</string>
    <string name="label_favourites">Favourites</string>
    <string name="label_settings">Settings</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_profile">Profile</string>
    <string name="label_more">More</string>
    <string name="label_debug">Debug</string>
    <string name="label_about">About</string>
 
    
    <!-- Fragment Preferences-->
    <string name="pref_on">On</string>
    <string name="pref_off">Off</string>
    <string name="pref_title_category">Category Preference</string>
    <string name="pref_title">Preference</string>
    <string name="pref_title_switch">Switch Preference</string>
    <string name="pref_secondary_text">Secondary text</string>
    <string name="pre_open_source_licenses">Open source licenses</string>
    
    
    <!-- Display -->
    <string name="display_title">Display</string>
    <string name="diaplay_contents">Dark theme, dynamic color, languages</string>
    <string name="display_theme_light">Light theme</string>
    <string name="display_theme_dark">Dark theme</string>
    <string name="display_theme_system">Follow system</string>
    <string name="display_theme_amoled">Amoled theme</string>
    <!-- Actions -->
    
    <string name="action_settings">Settings</string>
    <string name="action_menu">Menu</string>
    <string name="action_filter">Filter</string>
    <string name="action_filter_downloaded">Downloaded</string>
    <string name="action_filter_bookmarked">Bookmarked</string>
    <string name="action_filter_tracked">Tracked</string>
    <string name="action_filter_unread">Unread</string>
    <string name="action_filter_started">Started</string>
    <string name="action_filter_empty">Remove filter</string>
    <string name="action_sort_alpha">Alphabetically</string>
    <string name="action_sort_count">Total manga</string>
    <string name="action_sort_total">Total chapters</string>
    <string name="action_sort_last_read">Last read</string>
    <string name="action_sort_last_manga_update">Last manga update</string>
    <string name="action_sort_unread_count">Unread count</string>
    <string name="action_sort_latest_chapter">Latest chapter</string>
    <string name="action_sort_chapter_fetch_date">Chapter fetch date</string>
    <string name="action_sort_date_added">Date added</string>
    <string name="action_search">Search</string>
    <string name="action_search_settings">Search settings</string>
    <string name="action_global_search">Global search</string>
    <string name="action_select_all">Select all</string>
    <string name="action_select_inverse">Select inverse</string>
	<string name="action_mark_read_all">Mark all as read</string>
    <string name="action_mark_as_read">Mark as read</string>
    <string name="action_mark_as_unread">Mark as unread</string>
    <string name="action_mark_previous_as_read">Mark previous as read</string>
    <string name="action_download">Download</string>
    <string name="action_download_unread">Download unread chapters</string>
    <string name="action_bookmark">Bookmark chapter</string>
    <string name="action_remove_bookmark">Unbookmark chapter</string>
    <string name="action_delete">Delete</string>
    <string name="action_update">Update</string>
    <string name="action_update_library">Update library</string>
    <string name="action_enable_all">Enable all</string>
    <string name="action_disable_all">Disable all</string>
    <string name="action_edit">Edit</string>
    <string name="action_add">Add</string>
    <string name="action_add_category">Add category</string>
    <string name="action_edit_categories">Edit categories</string>
    <string name="action_rename_category">Rename category</string>
    <string name="action_move_category">Set categories</string>
    <string name="action_edit_cover">Edit cover</string>
    <string name="action_view_chapters">View chapters</string>
    <string name="action_stop">Stop</string>
    <string name="action_pause">Pause</string>
    <string name="action_previous_chapter">Previous chapter</string>
    <string name="action_next_chapter">Next chapter</string>
    <string name="action_retry">Retry</string>
    <string name="action_remove">Remove</string>
    <string name="action_start">Start</string>
    <string name="action_resume">Resume</string>
    <string name="action_open_in_browser">Open in browser</string>
    <string name="action_show_manga">Show manga</string>
    <!-- Do not translate "WebView" -->
    <string name="action_open_in_web_view">Open in WebView</string>
    <string name="action_web_view" translatable="false">WebView</string>
    <string name="action_migrate">Migrate</string>
    <string name="action_display_mode">Display mode</string>
    <string name="action_display">Display</string>
    <string name="action_display_grid">Compact grid</string>
    <string name="action_display_comfortable_grid">Comfortable grid</string>
    <string name="action_display_list">List</string>
    <string name="action_display_cover_only_grid">Cover-only grid</string>
    <string name="action_display_download_badge">Downloaded chapters</string>
    <string name="action_display_unread_badge">Unread chapters</string>
    <string name="action_display_local_badge">Local manga</string>
    <string name="action_display_language_badge">Language</string>
    <string name="action_display_show_tabs">Show category tabs</string>
    <string name="action_display_show_number_of_items">Show number of items</string>
    <string name="action_disable">Disable</string>
    <string name="action_pin">Pin</string>
    <string name="action_unpin">Unpin</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_cancel_all">Cancel all</string>
    <string name="cancel_all_for_series">Cancel all for this series</string>
    <string name="action_sort">Sort</string>
    <string name="action_reorganize_by">Reorder</string>
    <string name="action_order_by_upload_date">By upload date</string>
    <string name="action_order_by_chapter_number">By chapter number</string>
    <string name="action_newest">Newest</string>
    <string name="action_oldest">Oldest</string>
    <string name="action_asc">Ascending</string>
    <string name="action_desc">Descending</string>
    <string name="action_move_to_top">Move to top</string>
    <string name="action_move_to_top_all_for_series">Move series to top</string>
    <string name="action_move_to_bottom">Move to bottom</string>
    <string name="action_install">Install</string>
    <string name="action_share">Share</string>
    <string name="action_report">Report</string>
    <string name="action_save">Save</string>
    <string name="action_reset">Reset</string>
    <string name="action_undo">Undo</string>
    <string name="action_close">Close</string>
    <string name="action_open_log">Open log</string>
    <string name="action_show_errors">Tap to see details</string>
    <string name="action_create">Create</string>
    <string name="action_restore">Restore</string>
    <string name="action_webview_back">Back</string>
    <string name="action_webview_forward">Forward</string>
    <string name="action_webview_refresh">Refresh</string>
    <string name="action_start_downloading_now">Start downloading now</string>
    <string name="action_faq_and_guides">FAQ and Guides</string>

</resources>