<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:startDestination="@id/mainFragment">
    
    <fragment
        android:id="@+id/mainFragment"
        android:name="dev.n3shemmy3.kutamba.fragment.MainFragment"
        android:label="@string/label_home"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/open_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/open_searchFragment"
            app:destination="@id/searchFragment">
          
        </action>

    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="dev.n3shemmy3.kutamba.fragment.SearchFragment"
        android:label="@string/label_search"
        tools:layout="@layout/fragment_search">
        <argument
            android:name="showSearchView"
            app:argType="boolean"
            android:defaultValue="true" />

    </fragment>
    
   <fragment
        android:id="@+id/profileFragment"
        android:name="dev.n3shemmy3.kutamba.fragment.ProfileFragment"
        android:label="@string/label_profile"
        tools:layout="@layout/fragment_profile">
        
    </fragment>
    
    
</navigation>