<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:src="@drawable/oddtaxi"
         android:id="@+id/cover" />

    <LinearLayout
         android:layout_height="?actionBarSize"
         android:layout_width="match_parent"
         android:paddingVertical="@dimen/view_padding_vertical"
         android:orientation="horizontal"
         android:layout_alignParentTop="true"
         android:paddingHorizontal="@dimen/view_padding_horizontal">

        <Button
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             app:icon="@drawable/outline_clear_24"
             android:tooltipText="@string/action_close"
             style="@style/Widget.Material3.Button.IconButton"
             android:id="@+id/actionClose" />

        <Space
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:layout_weight="1" />

        <Button
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             app:icon="@drawable/outline_save_24"
             android:tooltipText="@string/action_save"
             style="@style/Widget.Material3.Button.IconButton"
             android:id="@+id/actionSave" />

        <Space
             android:layout_height="wrap_content"
             android:layout_width="@dimen/view_padding_vertical" />

        <Button
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             app:icon="@drawable/outline_share_24"
             android:tooltipText="@string/action_share"
             style="@style/Widget.Material3.Button.IconButton"
             android:id="@+id/actionShare" />

    </LinearLayout>

</RelativeLayout>