<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:startDestination="@id/mainFragment"
        
>
    <fragment
        android:id="@+id/mainFragment"
        android:name="dev.n3shemmy3.kutamba.fragment.MainFragment"
        android:label="@string/label_explore"
        tools:layout="@layout/fragment_main"
    />
   
    <fragment
        android:id="@+id/profileFragment"
        android:name="dev.n3shemmy3.kutamba.fragment.ProfileFragment"
        android:label="@string/label_profile"
        tools:layout="@layout/fragment_profile"
            
    />
    <fragment
        android:id="@+id/searchFragment"
        android:name="dev.n3shemmy3.kutamba.fragment.SearchFragment"
        android:label="@string/label_search"
        tools:layout="@layout/fragment_search"
            
    />
    
    <include 
        app:graph="@navigation/settings_graph" />

   <action
        android:id="@+id/open_mainFragment"
        app:destination="@id/mainFragment"
        app:enterAnim="@anim/enter_from_right"
        app:exitAnim="@anim/exit_to_left"
        app:popEnterAnim="@anim/enter_from_left"
        app:popExitAnim="@anim/exit_to_right"
            
    />
    <action
        android:id="@+id/open_profileFragment"
        app:destination="@id/profileFragment"
        app:enterAnim="@anim/enter_from_right"
        app:exitAnim="@anim/exit_to_left"
        app:popEnterAnim="@anim/enter_from_left"
        app:popExitAnim="@anim/exit_to_right"
            
    />

    <action
        android:id="@+id/open_searchFragment"
        app:destination="@id/searchFragment"
        app:enterAnim="@anim/enter_from_right"
        app:exitAnim="@anim/exit_to_left"
        app:popEnterAnim="@anim/enter_from_left"
        app:popExitAnim="@anim/exit_to_right"
            
    />

    <action
        android:id="@+id/open_settingsFragment"
        app:destination="@id/settingsFragment"
        app:enterAnim="@anim/enter_from_right"
        app:exitAnim="@anim/exit_to_left"
        app:popEnterAnim="@anim/enter_from_left"
        app:popExitAnim="@anim/exit_to_right"
            
    />

</navigation>
